[package]
name = "folder-exporter"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "server"

[features]
debug = ["essentials/dotenv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "0.3.6", git = "https://github.com/majksa-dev/rust-essentials", features = [
    "log",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
envy = "0.4.2"
slack-morphism = { version = "2.3", features = ["hyper"] }
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
zip = "2.2.0"
walkdir = "2.5.0"
rand = "0.8.5"
